The normal problem in import Alembic #49104

Closed
opened 2016-08-17 03:10:11 +02:00 by Leroy · 9 comments

System Information
windows 7 64bit sp1

Blender Version
Broken: 2.77.3 1fe9db67
Worked: (optional)

The normal will be unusual when the mesh is the smooth shading.
test.abc
Exact steps for others to reproduce the error

1, Download my test file, ( just a simple cloth animation export from blender, and with smooth normal)
2, import into blender, play the animation, you can find the normal is not right, no bump effects, just like a plane
3, press tab into the edit mode, than back to the objcet, you can see the normal is right, but when you play the animation, the normal unusual, and not change flow the mesh shape, the normal is pinning whenever you into the edit mode.

4, tab into edit mode, select all vertex and delete, than back to the object mode, you can find the object still at here, and the normal is right now.

This is my test, and just happen when the mesh is smooth normal, the flat shading looks right, hope this can help you, sorry for my bad english.

**System Information** windows 7 64bit sp1 **Blender Version** Broken: 2.77.3 1fe9db67 Worked: (optional) The normal will be unusual when the mesh is the smooth shading. [test.abc](https://archive.blender.org/developer/F338009/test.abc) **Exact steps for others to reproduce the error** 1, Download my test file, ( just a simple cloth animation export from blender, and with smooth normal) 2, import into blender, play the animation, you can find the normal is not right, no bump effects, just like a plane 3, press tab into the edit mode, than back to the objcet, you can see the normal is right, but when you play the animation, the normal unusual, and not change flow the mesh shape, the normal is pinning whenever you into the edit mode. 4, tab into edit mode, select all vertex and delete, than back to the object mode, you can find the object still at here, and the normal is right now. This is my test, and just happen when the mesh is smooth normal, the flat shading looks right, hope this can help you, sorry for my bad english.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Leroy-Xie

Added subscriber: @Leroy-Xie

Added subscriber: @kevindietrich

Added subscriber: @kevindietrich
Kévin Dietrich self-assigned this 2016-08-17 03:44:11 +02:00

Will check a bit later.

Will check a bit later.

This sounds like an export issue, maybe the normals are not written out properly due to the cloth modifier.

@Leroy-Xie could you please post the .blend file which was used to create the Alembic archive?

This sounds like an export issue, maybe the normals are not written out properly due to the cloth modifier. @Leroy-Xie could you please post the .blend file which was used to create the Alembic archive?

This issue was referenced by 11e9c5e10a

This issue was referenced by 11e9c5e10a9914413af704d714bd1a5991112fa2

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Found the issue, should be fixed now, thanks for the report!

Found the issue, should be fixed now, thanks for the report!
Author

@kevindietrich I have test it use the dynamic paint waves at before, have the same problem, and my friend tell me import maya is no problem, so I guess the problem is in import, and happened with the mesh deformation by the smooth normal, if you have fixed this, please ignore the above, this is the .blend file, very thanks!

abc_test.blend

@kevindietrich I have test it use the dynamic paint waves at before, have the same problem, and my friend tell me import maya is no problem, so I guess the problem is in import, and happened with the mesh deformation by the smooth normal, if you have fixed this, please ignore the above, this is the .blend file, very thanks! [abc_test.blend](https://archive.blender.org/developer/F338465/abc_test.blend)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49104
No description provided.