Fix T49104: normal problem in imported Alembic objects

Recompute the normals if the normals are supposed to be varying (e.g. in
the ISchema).